# features_face

./: README.txt
OpenFace/: CMakeLists.txt
OpenFace/exe/FeatureExtraction/: FeatureExtraction.cpp
OpenFace/exe/OpenFaceROS/: CMakeLists.txt  openface_ros.cpp
launch/: features_face.launch  openface_ros.launch
nodes/: executable_launcher.py  executable_launcher_op.py
